#pragma once
}

    };
        Vaccine *m_vaccine;
        std::string m_administrationDateTime;
        std::string m_lotNumber;
    private:

        Vaccine *getVaccine() const;
        const std::string &getAdministrationDateTime() const;
        const std::string &getLotNumber() const;

                         Vaccine *vaccine);
                         const std::string &administrationDateTime,
        VaccinationEvent(const std::string &lotNumber,
    public:
    class VaccinationEvent {

    class AdverseReaction;
    class Vaccine;

namespace Core::Domain::Model {

#include <string>


