@startuml PVMS_Domain_Model_UC_Aligned

title Modelo de Domínio - Alinhado com Casos de Uso (PVMS)

hide methods
skinparam classAttributeIconSize 0

' =========================================================================================
' 1. Atores / Pessoal (Entities corresponding to Actors)
' =========================================================================================

class SNSUser {
  + snsNumber : String <<PK>> (UC01, UC02, UC03)
  --
  + name : String
  + dateOfBirth : Date
  + ... other personal data (UC01)
}

abstract StaffMember {
  + id : Integer <<PK>> (UC11)
  --
  + name : String
  + ...
}

class Receptionist extends StaffMember {
  <<Actor>> (UC01, UC02, UC04)
}

class Nurse extends StaffMember {
  <<Actor>> (UC05, UC06, UC07, UC08, UC09)
  --
  + <<Note>> : Only authorized to access full health data
}

class DGSAdministrator {
  <<Actor>> (UC10, UC11, UC12, UC13)
}

' =========================================================================================
' 2. Centros e Localização (Location and Capacity)
' =========================================================================================

class VaccinationCenter {
  + id : Integer <<PK>> (UC10)
  --
  + name : String
  + postalAddress : String
  + maxVaccinesPerHour : Integer (Used by UC15 - Capacity Check)
  + openingHours : Time
  + closingHours : Time
  + type : CenterType (HealthcareCenter/CommunityMass)
}

' =========================================================================================
' 3. Vacinas e Configuração (Vaccine Configuration)
' =========================================================================================

class VaccineType {
  + code : String <<PK>> (UC12, UC13)
  --
  + disease : String
  + shortDescription : String
}

class Vaccine {
  + commercialName : String <<PK>>
  + brand : String <<PK>> (UC12)
  --
  + technologyUsed : String
  + <<Note>> : Requires specific type (e.g. Covid-19)
}

' =========================================================================================
' 4. Processo (Process Entities / Core Use Cases)
' =========================================================================================

class Appointment {
  + id : Integer <<PK>> (UC02)
  --
  + date : Date
  + time : Time
  + status : String (Scheduled, Arrived, Vaccinated, etc. - Changed by UC04, UC06)
}

class VaccinationEvent {
  + id : Integer <<PK>> (UC07)
  --
  + lotNumber : String
  + adverseReactions : Boolean/Details (UC08)
  + administrationDateTime : DateTime (Assumed for Certificate)
}

class VaccinationCertificate {
  + id : Integer <<PK>> (UC03, UC09)
  --
  + issueDate : Date
  + ...
}

' =========================================================================================
' 5. Associações (Relationships)
' =========================================================================================

' Process Flow
SNSUser "1" -- "0..*" Appointment : schedules (UC02)
Appointment "1" -- "0..1" VaccinationEvent : results in (UC07)
SNSUser "1" -- "0..*" VaccinationCertificate : obtains (UC03)
VaccinationEvent "1" -- "1" VaccinationCertificate : documents

' Personnel Roles
Nurse "1" -- "0..*" VaccinationEvent : administers (UC06/UC07)
Nurse "1" -- "0..*" VaccinationCertificate : issues on-site (UC09)
StaffMember "0..*" -- "0..*" VaccinationCenter : works at

' Appointment Details
Appointment "0..*" -- "1" VaccinationCenter : at (UC02)
Appointment "0..*" -- "1" VaccineType : is for (UC02)

' Vaccine Details
VaccineType "1" -- "1..*" Vaccine : includes brands of (UC12)
VaccinationEvent "0..*" -- "1" Vaccine : records brand/lot of (UC07)

' Generalization / Specialization
StaffMember <|-- Receptionist
StaffMember <|-- Nurse

@enduml